virt01/manual/media/bazarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: tvshows,movies
        backup.velero.io/backup-volumes: bazarr-pv
      labels:
        app: bazarr
    spec:
      serviceAccountName: bazarr-sa
      containers:
        - name: bazarr
          image: harbor.nf.lab/proxy.docker.io/linuxserver/bazarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6767
              name: bazarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: bazarr-pv
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: tvshows
              mountPath: /tv
      volumes:
        - name: bazarr-pv
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: movies
          hostPath:
            path: /mnt/emby_unified/Movies
            type: Directory
        - name: tvshows
          hostPath:
            path: /mnt/emby_unified/TVShows
            type: Directory
